# cleanpython

./: .coveragerc  .gitignore  .isort.cfg  .travis.yml  404.html  LICENSE  README.md  README.rst  confix.py  flask_app.html  foobar.html  genindex.html  index.html  justfile  lines_of_code.csv  lines_of_code.txt  mkdocs.yml  modules.html  mylib.html  objects.inv  pre-commit-black  pre-commit-ruff  py-modindex.html  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  samples.html  script.html  search.html  searchindex.js  setup.py  test_foobar.html  update-requirements.txt
.doctrees/: environment.pickle  index.doctree  modules.doctree  mylib.doctree  script.doctree
.github/workflows/: cc-coverage.yml  ci.yml  cloc.yml  pylint.yml  sphinx.yml
_modules/: flask_app.html  foobar.html  index.html  test_foobar.html
_modules/mylib/: functions.html
_modules/samples/: sample_module.html  test_with_hypothesis.html  uselib.html
_sources/: flask_app.rst.txt  modules.rst.txt  samples.rst.txt  test_foobar.rst.txt
app/: index.html
cp/: index.html
docs/: Makefile  app.md  conf.py  index.md  index.rst  modules.rst  mylib.rst  requirements.txt
docs/source/: git_status.rst  hamming.rst  index.rst  (+4 more)
git-hooks/: pre-push
notebooks/: Stuff.ipynb
search/: search_index.json
src/: cysample.pyx  download.py  flask_app.py  foobar.py  git_status.py  main.py  module.py  puzzle.py  rand_puzzle.py  script.py  test_foobar.py  test_git_status.py  test_module.py  test_script.py
tests/: test_app.py  test_download.py  test_foobar.py
(+27 files in other folders)
