[tool.poetry]
name = "cleanpython"
version = "0.1.0"
description = "Clean code with batteries included."
authors = ["iacopo <iacopomarmorini@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"  # Just an example

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
mypy = "^1.6.1"
pylint = "^3.0.2"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.10.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
sphinx-sizzle-theme = "^0.1.3"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
